@@ -29,6 +29,7 @@ Features
 
  * New obsservicedispatch service to handle source service runs in a queue
    and asynchron.
+ * Allow admins to lock or delete users and their home projects via new command
 
 Incompatible changes:
 =====================
